--- a/src/pages/Dashboard.css
+++ b/src/pages/Dashboard.css
@@ -1,6 +1,6 @@
 
 @media (min-width: 1024px) {
-    .container {
+    .container-dashboard {
         position: relative;
         left: 225px;
     }
