--- a/src/pages/Report.css
+++ b/src/pages/Report.css
@@ -2,10 +2,10 @@
     .container-reports {
         
         position: relative;
-        left: 70px;
+        left: 185px;
         width: 92%;
     }
-    .container-header{
+    .container-header-reports{
         position: relative;
         left: 150px;
     }
