--- a/src/components/CustomerTypeAnalysisReport.css
+++ b/src/components/CustomerTypeAnalysisReport.css
@@ -1,14 +1,17 @@
 
+
 @media (min-width: 1024px) {
-    .container-salesPerformanceReport {
+    .container-customerType {
         width: 80%;
         position: relative;
+        left: -100px;
     }
 }
 
 @media (min-width: 1400px) {
-    .container-salesPerformanceReport {
+    .container-customerType {
         width: 80%;
         position: relative;
+        left: -100px;
     }
 }
